# ray-tracing-demo

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
scripts/: build_debug.sh  build_release.sh
src/: Engine.cppm  LoadModel.cpp  ShaderController.cppm  SurfaceAreaHeuristic.cpp  Types.cppm  UI.cppm  Window.cppm  main.cpp
src/shaders/: raytrace.comp
tests/: CMakeLists.txt  test_main.cpp
